<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="480dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:elevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_background"
        android:orientation="vertical">
        <!-- 상단툴바   -->
        <RelativeLayout
            android:id="@+id/dialog_header_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_header_height"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/dialog_clothes_cancel_btn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="8dp"
                android:background="@drawable/ic_all_cancel"
                android:backgroundTint="@android:color/white" />

            <Button
                android:id="@+id/dialog_clothes_ok_btn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:background="@drawable/ic_all_check_round"
                android:backgroundTint="@android:color/white" />
        </RelativeLayout>

        <!--컨텐츠-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:padding="8dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/outline_layout"
                    android:padding="8dp">
                    <ImageView
                        android:id="@+id/item_clothes_img_iv"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:background="@drawable/ic_all_plus"
                        android:backgroundTint="@color/colorPrimary"
                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/outline_layout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:text="@string/clothes_item_type"
                        android:textSize="@dimen/dialog_text_size"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/item_clothes_type_tv"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:clickable="true"
                        android:text="@string/clothes_item_type"
                        android:textSize="@dimen/dialog_text_size"
                        android:textAlignment="center"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/clothes_item_color"
                        android:textSize="@dimen/dialog_text_size"
                        android:textAlignment="center"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:gravity="center"
                            android:background="@drawable/outline_layout_gray_thin"
                            >
                            <ImageView
                                android:id="@+id/item_clothes_color_iv"
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:clickable="true"
                                android:background="@android:color/black" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/item_clothes_color_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:text="색이름"
                            android:textSize="@dimen/dialog_text_size"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp"
                    android:weightSum="5">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:text="@string/clothes_item_temperature"
                        android:textSize="@dimen/dialog_text_size"
                        android:textAlignment="center"/>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="7"
                            >
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center">
                                <TextView
                                    android:layout_width="10dp"
                                    android:layout_height="56dp"
                                    android:text="한겨울"
                                    android:textSize="8dp"
                                    android:layout_alignParentLeft="true"
                                    />
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center">
                                <TextView
                                    android:layout_width="10dp"
                                    android:layout_height="56dp"
                                    android:text="초겨울"
                                    android:textSize="8dp"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center">
                                <TextView
                                    android:layout_width="10dp"
                                    android:layout_height="56dp"
                                    android:text="가을"
                                    android:textSize="8dp"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center">
                                <TextView
                                    android:layout_width="10dp"
                                    android:layout_height="56dp"
                                    android:text="초봄"
                                    android:textSize="8dp"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center">
                                <TextView
                                    android:layout_width="10dp"
                                    android:layout_height="56dp"
                                    android:text="늦봄"
                                    android:textSize="8dp"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center">
                                <TextView
                                    android:layout_width="10dp"
                                    android:layout_height="56dp"
                                    android:text="초여름"
                                    android:textSize="8dp"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center">
                                <TextView
                                    android:layout_width="10dp"
                                    android:layout_height="56dp"
                                    android:text="한여름"
                                    android:textSize="8dp"
                                    android:layout_alignParentRight="true"/>

                            </LinearLayout>

                        </LinearLayout>


                        <com.appyvet.materialrangebar.RangeBar
                            android:id="@+id/item_clothes_tem_RB"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:mrb_pinMaxFont="10dp"
                            app:mrb_rangeBarColor="@color/colorPrimaryDark"
                            app:mrb_tickColor="@color/colorPrimary"
                            app:mrb_connectingLineColor="@color/colorPrimary"
                            app:mrb_selectorColor="@android:color/white"
                            app:mrb_selectorBoundaryColor="@color/colorPrimary"
                            app:mrb_pinColor="@color/colorAccent"
                            app:mrb_selectorBoundarySize="2dp"
                            app:mrb_tickEnd="30"
                            app:mrb_tickInterval="1"
                            app:mrb_tickStart="-5"/>
                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>
